package edu.fiuba.algoChess.interfaz.controlladores;

import edu.fiuba.algoChess.interfaz.vista.DialogoAlerta;
import edu.fiuba.algoChess.interfaz.vista.SegundaEtapa;
import edu.fiuba.algoChess.modelo.entidades.Curandero;
import edu.fiuba.algoChess.modelo.entidades.Pieza;
import edu.fiuba.algoChess.modelo.entidades.PiezaNull;
import edu.fiuba.algoChess.modelo.entorno.Ubicacion;
import edu.fiuba.algoChess.modelo.excepciones.*;
import edu.fiuba.algoChess.modelo.juego.Juego;
import javafx.event.ActionEvent;
import javafx.event.EventHandler;
import javafx.scene.control.TextField;
import javafx.stage.Stage;
import lombok.AllArgsConstructor;


@AllArgsConstructor
public class CurarPiezaHandler implements EventHandler<ActionEvent> {
	Juego juego;
	Curandero emisor;
	TextField tFX;
	TextField tFY;
	Stage stage;
	SegundaEtapa segundaEtapa;

	@Override
	public void handle(ActionEvent actionEvent) {
		int x = Integer.parseInt((tFX.getText()));
		int y = Integer.parseInt((tFY.getText()));
		try {
			Pieza receptor = juego.getTablero().getCelda(new Ubicacion(x,y)).getPiezaActual();
			if(receptor.getClass() != PiezaNull.class) {
				emisor.curar(receptor);
				stage.close();
				segundaEtapa.cambioTurno();
				DialogoAlerta.Alerta("Curacion", "Curacion efectuada, vida restante del aliado: " + receptor.getVida().getValorActual(), 2);
			}
		} catch(InteraccionInvalidaException exc){
			DialogoAlerta.Alerta("Curacion a un Enemigo", "No se puede curar ni a un enemigo ni a una catapulta", 2);
		} catch(OperacionInvalidaSobreObjetoNuloException ex){
			DialogoAlerta.Alerta("Curacion a vacio", "No se puede curar a una celda vacia", 2);
		}catch (FueraDeRangoException ex) {
			DialogoAlerta.Alerta("Muy lejos", "No se puede curar a una pieza tan lejana", 2);
		}
	}
}