package edu.fiuba.algoChess.interfaz.controlladores;

public class IniciarJuegoHandler {
}
