@startuml

title __CONTROLLADORES's Class Diagram__\n

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.AceptarNombresHandler {
          - TFnombreJugador1 : TextField
          - TFnombreJugador2 : TextField
          - popupNombres : Popup
          - stage : Stage
          + AceptarNombresHandler()
          + handle()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.AtacarPiezaHandler {
          ~ stage : Stage
          ~ tFX : TextField
          ~ tFY : TextField
          + AtacarPiezaHandler()
          + handle()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.CancelarNombresHandler {
          - popupNombres : Popup
          - stage : Stage
          + CancelarNombresHandler()
          + handle()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.CrearPiezaHandler {
          ~ head : HBox
          ~ nombrePieza : String
          ~ stageUbicar : Stage
          ~ x : TextField
          ~ y : TextField
          + CrearPiezaHandler()
          + handle()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.CurarPiezaHandler {
          ~ stage : Stage
          ~ tFX : TextField
          ~ tFY : TextField
          + CurarPiezaHandler()
          + handle()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.IniciarJuegoHandler {
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.JugarHandler {
          - stage : Stage
          + JugarHandler()
          + handle()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.SalirHandler {
          + handle()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace interfaz.controlladores {
      class edu.fiuba.algoChess.interfaz.controlladores.UbicarPiezaHandler {
          - head : HBox
          - listaPieza : HashMap<String, Class>
          - nombrePieza : String
          - stagePrincipal : Stage
          - stageUbicar : Stage
          - tFX : TextField
          - tFY : TextField
          + UbicarPiezaHandler()
          + alerta3seg()
          + handle()
      }
    }
  }
  

  edu.fiuba.algoChess.interfaz.controlladores.AceptarNombresHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.AtacarPiezaHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.AtacarPiezaHandler o-- edu.fiuba.algoChess.modelo.entidades.Pieza : emisor
  edu.fiuba.algoChess.interfaz.controlladores.AtacarPiezaHandler o-- edu.fiuba.algoChess.modelo.juego.Juego : juego
  edu.fiuba.algoChess.interfaz.controlladores.AtacarPiezaHandler o-- edu.fiuba.algoChess.interfaz.vista.SegundaEtapa : segundaEtapa
  edu.fiuba.algoChess.interfaz.controlladores.CancelarNombresHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.CrearPiezaHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.CrearPiezaHandler o-- edu.fiuba.algoChess.modelo.juego.Juego : juego
  edu.fiuba.algoChess.interfaz.controlladores.CrearPiezaHandler o-- edu.fiuba.algoChess.interfaz.vista.PantallaPrincipal : pantallaPrincipal
  edu.fiuba.algoChess.interfaz.controlladores.CurarPiezaHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.CurarPiezaHandler o-- edu.fiuba.algoChess.modelo.entidades.Curandero : emisor
  edu.fiuba.algoChess.interfaz.controlladores.CurarPiezaHandler o-- edu.fiuba.algoChess.modelo.juego.Juego : juego
  edu.fiuba.algoChess.interfaz.controlladores.CurarPiezaHandler o-- edu.fiuba.algoChess.interfaz.vista.SegundaEtapa : segundaEtapa
  edu.fiuba.algoChess.interfaz.controlladores.JugarHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.SalirHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.UbicarPiezaHandler .up.|> javafx.event.EventHandler
  edu.fiuba.algoChess.interfaz.controlladores.UbicarPiezaHandler o-- edu.fiuba.algoChess.modelo.bandos.Bando : bandoPieza
  edu.fiuba.algoChess.interfaz.controlladores.UbicarPiezaHandler o-- edu.fiuba.algoChess.modelo.juego.Juego : juego
  edu.fiuba.algoChess.interfaz.controlladores.UbicarPiezaHandler o-- edu.fiuba.algoChess.interfaz.vista.VistaTablero : mapView
  edu.fiuba.algoChess.interfaz.controlladores.UbicarPiezaHandler o-- edu.fiuba.algoChess.interfaz.vista.PantallaPrincipal : pantallaPrincipal
  edu.fiuba.algoChess.interfaz.controlladores.UbicarPiezaHandler o-- edu.fiuba.algoChess.interfaz.vista.VistaPieza : pieceView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
